--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="101dp"
         android:layout_marginEnd="101dp"
+        android:background="@drawable/borderstyle"
         android:text="Enter your weight and your height"
+        android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.899"
-        android:paddingStart="4dp"/>
+        />
 
     <EditText
         android:id="@+id/editTextNumber"
@@ -28,10 +30,14 @@
         android:layout_marginStart="101dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
+        android:background="@drawable/borderstyle"
         android:inputType="number"
+        android:minHeight="48dp"
         android:text="Enter your weight (Kilograms):"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="343dp" />
 
     <EditText
@@ -39,8 +45,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:background="@drawable/borderstyle"
         android:inputType="number"
+        android:minHeight="48dp"
         android:text="Enter your height (Centimeters)"
+        android:padding="10dp"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="101dp"
         tools:layout_editor_absoluteY="413dp" />
 
@@ -48,9 +58,18 @@
         android:id="@+id/textView2"
         android:layout_width="124dp"
         android:layout_height="40dp"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="99dp"
         android:textSize="30dp"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="592dp" />
+        android:padding="10dp"
+        android:background="@drawable/borderstyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        />
 
     <Button
         android:id="@+id/button"
@@ -59,10 +78,13 @@
         android:layout_marginStart="101dp"
         android:layout_marginTop="43dp"
         android:layout_marginEnd="101dp"
+        android:background="@drawable/borderstyle"
         android:text="Calculate BMI"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
