--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,11 +29,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="101dp"
         android:layout_marginEnd="101dp"
-        android:ems="10"
         android:background="@drawable/borderstyle"
+        android:ems="10"
+        android:hint="Enter your weight (Kilograms):"
         android:inputType="number"
         android:minHeight="48dp"
-        android:text="Enter your weight (Kilograms):"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,11 +44,11 @@
         android:id="@+id/editTextNumber2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:background="@drawable/borderstyle"
+        android:ems="10"
+        android:hint="Enter your height (Centimeters)"
         android:inputType="number"
         android:minHeight="48dp"
-        android:text="Enter your height (Centimeters)"
         android:padding="10dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="101dp"
